--- a/src/components/PostsContainer/Posts.css
+++ b/src/components/PostsContainer/Posts.css
@@ -48,9 +48,18 @@
   height: 10px;
   width: 10px;
   margin: 10px;
+  padding: 0 10px;
 }
 .like-number {
   width: 100px;
   margin: 15px 0px;
   font-size: 16px;
+}
+
+i.fa-heart:hover {
+  cursor: pointer;
+}
+
+i.fa-heart-active {
+  color: red;
 }
